--- a/javaapiparent/java-api-string/pom.xml
+++ b/javaapiparent/java-api-string/pom.xml
@@ -8,11 +8,8 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <packaging>jar</packaging>
-    <artifactId>java-api-object</artifactId>
-    <dependencies>
 
-    </dependencies>
+    <artifactId>java-api-string</artifactId>
 
 
 </project>
