--- a/javaapiparent/pom.xml
+++ b/javaapiparent/pom.xml
@@ -9,17 +9,19 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>java-api-object</module>
+        <module>java-api-string</module>
     </modules>
     <packaging>pom</packaging>
     <properties>
-        <mysql.driver.verion>5.1.10</mysql.driver.verion>
+        <tomcat-jasper.driver.verion>8.5.24</tomcat-jasper.driver.verion>
     </properties>
     <dependencyManagement>
         <dependencies>
+            <!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-jasper -->
             <dependency>
-                <groupId>mysql</groupId>
-                <artifactId>mysql-connector-java</artifactId>
-                <version>${mysql.driver.verion}</version>
+                <groupId>org.apache.tomcat</groupId>
+                <artifactId>tomcat-jasper</artifactId>
+                <version>8.5.24</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
